# sqlx-rs

./: Cargo.toml
migrations/: 20220117015148_create_subscriptions_table.sql
src/: error.rs  extractors.rs  handlers.rs  jwt.rs  main.rs  router.rs
src/configs/: db.rs
src/models/: auth.rs  user.rs
