[package]
name = "sqlx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.4", features = ["headers"] }
chrono = "0.4.19"
dotenv = "0.15.0"
headers = "0.3.5"
jsonwebtoken = "7.2.0"
serde = "1.0.136"
serde_json = "1.0.78"
sqlx = { version = "0.5.10", features = ["runtime-tokio-native-tls", "postgres", "chrono", "mysql", "json"] }
tokio = { version = "1.15.0", features = ["full"] }
tower = "0.4.11"
tower-http = { version = "0.2.1", features = ["trace"] }
tracing-subscriber = "0.3.7"
